--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/style": "^0.8.0",
+    "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.12.1",
     "@reduxjs/toolkit": "^2.2.7",
